added flex stuff

--- a/sugarProject/wwwroot/HTML/mainPage.html
+++ b/sugarProject/wwwroot/HTML/mainPage.html
@@ -6,6 +6,9 @@
     <title></title>
 </head>
 <body>
+
+    <div class="PageLayout">
+
     <div>
         <ul>
             <li><a href="mainPage.html">Home</a></li>
@@ -15,5 +18,26 @@
 
         </ul>
     </div>
+
+
+        <div class="extendCenterDown" style="background-color:lightgrey">
+            <br />
+
+            <div>
+                <h1>
+                    Hello! welcome to the Home page here are some sugar facts
+                </h1>
+            </div>
+            <div>
+
+                <img height="500px"  src="../imgs/breadSugar.jpg" alt="breadSugar" />
+
+
+            </div>
+            
+
+        </div>
+
+        </div>
 </body>
 </html>
