--- a/sugarProject/wwwroot/HTML/secondary page.html
+++ b/sugarProject/wwwroot/HTML/secondary page.html
@@ -7,44 +7,50 @@
 </head>
 <body style="background-image: url(../imgs/bg2.webp)">
 
-    <div>
-        <ul>
-            <li><a href="mainPage.html">Home</a></li>
-            <li><a href="Secondary page.html">Secondary page</a></li>
-            <li><a href="sugarInBread.html">Sugar in bread</a></li>
-            <li><a href="">filler3</a></li>
+    <div class="PageLayout">
 
-        </ul>
-    </div>
-    <br />
-
-
-
-    <div style="background-color:antiquewhite" class="center">
 
         <div>
-            <h1>
-                General information about sugar
-            </h1>
+            <ul>
+                <li><a href="mainPage.html">Home</a></li>
+                <li><a href="Secondary page.html">Secondary page</a></li>
+                <li><a href="sugarInBread.html">Sugar in bread</a></li>
+                <li><a href="">filler3</a></li>
+
+            </ul>
+        </div>
+        <br />
+
+
+
+        <div style="background-color:antiquewhite" class="center">
+
+            <div>
+                <h1>
+                    General information about sugar
+                </h1>
+            </div>
+
+            <div>
+                Sugar is the generic name for sweet-tasting, soluble carbohydrates,
+                many of which are used in food. Simple sugars, also called monosaccharides,
+                include glucose, fructose, and galactose. Compound sugars, also called disaccharides
+                or double sugars, are molecules made of two bonded monosaccharides; common examples
+                are sucrose (glucose + fructose), lactose (glucose + galactose), and maltose (two molecules of glucose).
+                White sugar is a refined form of sucrose. In the body, compound sugars are hydrolysed into simple sugars.
+            </div>
         </div>
 
-        <div>
-            Sugar is the generic name for sweet-tasting, soluble carbohydrates,
-            many of which are used in food. Simple sugars, also called monosaccharides,
-            include glucose, fructose, and galactose. Compound sugars, also called disaccharides
-            or double sugars, are molecules made of two bonded monosaccharides; common examples
-            are sucrose (glucose + fructose), lactose (glucose + galactose), and maltose (two molecules of glucose).
-            White sugar is a refined form of sucrose. In the body, compound sugars are hydrolysed into simple sugars.
+
+
+
+        <div style="margin-top: 50px">
+            <img class="center" src="../imgs/sugar.jpeg" alt="sugar" />
         </div>
+
+
+
     </div>
-
-
-
-
-    <div style="margin-top: 50px">
-        <img class="center" src="../imgs/sugar.jpeg" alt="sugar" />
-    </div>
-
 
 
 </body>
