--- a/sugarProject/wwwroot/HTML/sugarInBread.html
+++ b/sugarProject/wwwroot/HTML/sugarInBread.html
@@ -7,7 +7,7 @@
 </head>
 
 
-<body style="background-image: url(../imgs/breadBG.jpeg)">
+<body style="background-color:burlywood">
 
     <div class="PageLayout">
 
