--- a/sugarProject/wwwroot/HTML/mainPage.html
+++ b/sugarProject/wwwroot/HTML/mainPage.html
@@ -5,39 +5,68 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body>
+
+
+<body style="background-color:burlywood">
 
     <div class="PageLayout">
 
-    <div>
-        <ul>
-            <li><a href="mainPage.html">Home</a></li>
-            <li><a href="Secondary page.html">Secondary page</a></li>
-            <li><a href="sugarInBread.html">Sugar in bread</a></li>
-            <li><a href="">filler3</a></li>
-
-        </ul>
-    </div>
 
 
-        <div class="extendCenterDown" style="background-color:lightgrey">
-            <br />
+
+        <div>
+            <ul>
+                <li><a href="mainPage.html">Home</a></li>
+                <li><a href="Secondary page.html">Secondary page</a></li>
+                <li><a href="sugarInBread.html">Sugar in bread</a></li>
+                <li><a href="">filler3</a></li>
+
+            </ul>
+        </div>
+        <br />
+
+
+
+
+
+
+        <div class="center" style="background-color:wheat">
+
 
             <div>
                 <h1>
-                    Hello! welcome to the Home page here are some sugar facts
+                    Welcome to the home page!
                 </h1>
             </div>
-            <div>
 
-                <img height="500px"  src="../imgs/breadSugar.jpg" alt="breadSugar" />
+            <div style="background-color:blanchedalmond">
 
 
+
+                <div style="padding:40px">
+
+
+                    <div>
+
+                    </div>
+                    <div>
+
+                        here are some sugar facts
+
+                    </div>
+                    <br />
+                    <img width="400px" src="..\imgs\breadSugar.jpg" />
+                </div>
             </div>
-            
+
 
         </div>
 
-        </div>
+
+
+
+
+    </div>
+
 </body>
 </html>
