uhhh i added to razor pages things

--- a/sugarProject/wwwroot/HTML/table/schedule.html
+++ b/sugarProject/wwwroot/HTML/table/schedule.html
@@ -18,7 +18,7 @@
             padding-left: 70px;
             padding-right: 70px;
             font-size: 22px;
-            background-color:lightgray;
+            background-color: lightgray;
         }
 
         td {
@@ -28,6 +28,48 @@
             padding: 20px;
             font-size: 22px;
             background-color: lightgray;
+        }
+       
+        .greenBg {
+            background-color: lightgreen;
+        }
+        .blueBg {
+            background-color: lightblue;
+        }
+        .yellowBg {
+            background-color: yellow;
+        }
+        .orangeBg {
+            background-color: orange;
+        }
+        .purpleBg {
+            background-color: purple;
+        }
+        .pinkBg {
+            background-color: pink;
+        }
+        .redishBg {
+            background-color: lightcoral;
+        }
+
+        .tealBg {
+            background-color: teal;
+        }
+     
+        .darkgoldenrodBg {
+            background-color: darkgoldenrod;
+        }
+        .plumBg {
+            background-color: plum;
+        }
+        .khakiBg {
+            background-color: khaki;
+        }
+        .oliveBg {
+            background-color: olive;
+        }
+        .cyanBg {
+            background-color: cyan;
         }
     </style>
 </head>
@@ -45,99 +87,79 @@
                 <th>Saturday</th>
             </tr>
             <tr>
+                <th>0</th>
+                <th></th>
+                <th rowspan="3" class="redishBg">Tab"a</th>
+                <th rowspan="3" class="orangeBg">physics</th>
+                <th class="oliveBg">Educator's hour</th>
+                <th class="yellowBg">Bible study</th>
+                <th></th>
+                <th></th>
+            </tr>
+            <tr>
                 <th>1</th>
+                <th rowspan="2" class="greenBg">Hebrew</th>
+                <th rowspan="2" class="orangeBg">Physics</th>
+                <th rowspan="3" class="blueBg">Math</th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
-
             </tr>
             <tr>
                 <th>2</th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
-
             </tr>
             <tr>
                 <th>3</th>
+                <th rowspan="2" class="purpleBg">literature</th>
+                <th class="pinkBg">English</th>
+                <th rowspan="2" class="blueBg">Math</th>
+                <th rowspan="2" class="blueBg">Math</th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
-
             </tr>
             <tr>
                 <th>4</th>
+                <th class="khakiBg">Traffic education</th>
+                <th class="plumBg">Physical education</th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
-
             </tr>
             <tr>
                 <th>5</th>
+                <th class="yellowBg">Bible study</th>
+                <th rowspan="6" class="cyanBg">Nah'shon</th>
+                <th class="plumBg">Physical education</th>
+                <th rowspan="2" class="pinkBg">English</th>
                 <th></th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
-
             </tr>
             <tr>
                 <th>6</th>
+                <th class="pinkBg">English</th>
+                <th class="pinkBg">English</th>
                 <th></th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
-
             </tr>
             <tr>
                 <th>7</th>
+                <th class="darkgoldenrodBg">History</th>
+                <th class="greenBg">Hebrew</th>
+                <th class="darkgoldenrodBg">History</th>
                 <th></th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
-
             </tr>
             <tr>
                 <th>8</th>
+                <th rowspan="2" class="tealBg">CS</th>
+                <th rowspan="3" class="tealBg">CS</th>
+                <th class="tealBg">CS</th>
                 <th></th>
                 <th></th>
                 <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-                <th></th>
-
             </tr>
             <tr>
                 <th>9</th>
@@ -145,11 +167,14 @@
                 <th></th>
                 <th></th>
                 <th></th>
+            </tr>
+            <tr>
+                <th>10</th>
                 <th></th>
                 <th></th>
                 <th></th>
-
-
+                <th></th>
+                <th></th>
             </tr>
         </table>
     </div>
